# User-manager-qml

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
DBusLib/: dbuslib.cpp  dbuslib.h
UIElements/: CustomBtn.qml  CustomTabBtn.qml  UserListElem.qml
UserTableModel/: localusertablemodel.cpp  localusertablemodel.h
groupsTreeModel/: treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
listModel/: localuser.cpp  localuser.h  localuserlistmodel.cpp  localuserlistmodel.h
model/: abstractcolumn.cpp  abstractcolumn.h  simplecolumn.cpp  simplecolumn.h  variantmaptablemodel.cpp  variantmaptablemodel.h
